deploy/k8s/svc-appointment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-appointment
spec:
  selector:
    app: svc-appointment
  ports:
    - port: 80
      targetPort: 8082
